Fixed white gap

--- a/main.css
+++ b/main.css
@@ -31,11 +31,9 @@ figure {
     margin: 10px;
 }
 
-/*
 .slick-slide {
     margin: 5px;
 }
-*/
 
 figure>p {
     margin-top: 10px;
@@ -173,11 +171,9 @@ button:hover {
         text-align: center;
         font-size: 15px;
     }
-/*
     div {
-        margin: 0px;
+        margin: 5px 0px 0px 0px;
     }
-*/
     h1 {
         font-size: 50px;
         line-height: 60px;
@@ -201,7 +197,7 @@ button:hover {
     }
     nav>ul>li {
         display: block;
-        margin: -8px;
+/*        margin: -8px;*/
     }
     figure>img {
         width: 70%
